# Optical_Text_Recognition

./: .gitignore  CMakeLists.txt  README.md  compile.sh  cr_unix.sh  cr_win32.sh
include/: crossPlatform.hpp  debug.hpp  enums.hpp  imageReader.hpp  mainWindow.hpp  manuelFileOperation.hpp  modelProp.hpp  opRandomMath.hpp  window.hpp
include/detect/: convert.hpp  detectLine.hpp  textStartEnd.hpp
include/filter_operation/: filterOperation.hpp  medianFilter.hpp
include/image_manuel_header/: bmpHeader.hpp  manuelFileOperation.hpp
include/model/: loadDataset.hpp  neuralNetwork.hpp  segment.hpp
include/ocr/: characterDetect.hpp  rowDetect.hpp
include/opPoint/: bmpReader.hpp  brightnessOperation.hpp  thresholdOperation.hpp
include/point_operation/: brightnessOperation.hpp  grayscaleOperation.hpp  pointOperation.hpp  thresholdOperation.hpp
src/: main.cpp  opRandomMath.cpp
src/detect/: convert.cpp  detectLine.cpp  textStartEnd.cpp
src/file_read/: imageReader.cpp  manuelFileOperation.cpp
src/filter_operation/: medianFilter.cpp
src/gui/: mainWindow.cpp  window.cpp
src/model/: loadDataset.cpp  neuralNetwork.cpp  segment.cpp
src/ocr/: characterDetect.cpp  rowDetect.cpp
src/opPoint/: bmpReader.cpp  brightnessOperation.cpp  thresholdOperation.cpp
src/point_operation/: brightnessOperation.cpp  grayscaleOperation.cpp  thresholdOperation.cpp
